# projet_deepln

./: .gitignore  Data_Preprocessing.ipynb  Projet_musi.ipynb  README.md  pyproject.toml
inference/: live_prediction.py  predict_on_video.py
